chore: change console scripts name
updates metadata to generate console scripts with more accurate
naming

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = pre-commit-commit-msg-linter-hook
+name = commit-msg-linter-hook
 version = 0.0.1
 author = Darcy Bras da Silva
 author_email = stardevelin@gmail.com
@@ -26,4 +26,4 @@ where = src
 
 [options.entry_points]
 console_scripts =
-    commit-msg-hook = commit_msg.hook:main
+    commit-msg-linter-hook = commit_msg.hook:main
