--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = commit-msg-linter-hook
 version = 0.0.1
 author = Darcy Bras da Silva
 author_email = stardevelin@gmail.com
-description = Checks if commit message matches the template commit rules
+description = Checks if commit message matches the dardevelin commit rules
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/dardevelin/pre-commit-commit-msg-linter-hook.git
@@ -18,7 +18,6 @@ classifiers =
 package_dir =
     = src
 packages = find:
-install_requires = nltk
 python_requires = >=3.9
 
 [options.packages.find]
